# mockexchange

./: .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DOCKER_VERSIONS.md  LICENSE  Makefile  README.md  README.md.backup  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md  release_template.md
.github/workflows/: backend.yml  ci.yml  coderabbit.yml  deck.yml  engine.yml  integration.yml  oracle.yml  release.yml
examples/: README.md
examples/order-generator/: .env.example  Dockerfile  README.md  docker-compose.yml  manage.sh  requirements.txt
examples/order-generator/scripts/: conftest.py  helpers.py  order_generator.py
scripts/: analyze_pr_comments.py  create-release-branch.sh  export_coderabbit_comments.sh  pr_2_comments_llm_prompt.txt  release.sh
scripts/github-pr-tools/: .env.example  README.md  analyze_pr_comments.py  export_github_pr_comments.sh
scripts/github-pr-tools/output/: .gitignore
