[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mockexchange-suite"
version = "0.1.5"
description = "Complete paper-trading platform with engine, periscope, and oracle"
authors = ["Didac <didac.crst@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4"
mypy = "^1.10"
pre-commit = "^3.6"
types-redis = "^4.6"
types-requests = "^2.31"
pandas-stubs = "^2.2"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E","W","F","I","B","C4","UP"]
ignore = [
  "E501",  # line too long (handled by formatter when possible)
  "B008",  # do not perform function calls in argument defaults
  "C901",  # too complex
  "E731",  # lambda assigned to name (refactor later)
  "UP040", # TypeAlias -> `type` keyword (refactor later)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["streamlit.*","plotly.*","ccxt.*"]
ignore_missing_imports = true
